Updated changelog in preparation of v0.11